--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.2.0 (January 23, 2014)
+    # inputs
+    - fixed an issue where shutdown caused an extra message to be logged.
 0.1.0 (January 13, 2014)
     # general
     - Adding change log.
