--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+0.3.0 (January 23, 2014)
+    # general
+    - updated jruby-kafka gemspec dependency
+    # outputs
+    - added support for compression_codec and compressed_topics
 0.2.0 (January 23, 2014)
     # inputs
     - fixed an issue where shutdown caused an extra message to be logged.
