--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+0.4.0 (March 13, 2014)
+    # general
+    - updated to support Kafka 0.8.1
+    - made default codec JSON on inputs and outputs.
+    # outputs
+    - added support for request_required_acks
 0.3.0 (January 23, 2014)
     # general
     - updated jruby-kafka gemspec dependency
