updated CHANGELOG for version 0.4.1
Former-commit-id: 31f333ffd3104e9db9ee47b161d59eaba7f697fb

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.4.1 (April 8, 2014)
+    # general
+    - updated to support Logstash 1.4.0
 0.4.0 (March 13, 2014)
     # general
     - updated to support Kafka 0.8.1
